# testtesttest

./: .gitignore  README.md  launch_pdf_spec_app.ps1  pdf_spec_builder.spec  pyproject.toml
.build-venv/: pyvenv.cfg
.build-venv/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py
.runtime/: window_state.json
.runtime/matplotlib/: fontlist-v390.json
.runtime/power_query_sdk/bootstrap_build/: PdfSpecBootstrap.mez
.runtime/power_query_sdk/bootstrap_source/: PdfSpecBootstrap.pq  PdfSpecBootstrap.proj  resources.resx
.runtime/tk/tk8.6/: pkgIndex.tcl
docs/: product-spec.md
pdf_spec_builder.egg-info/: SOURCES.txt  requires.txt
src/pdf_spec_app/: __init__.py  __main__.py  app.py  docx_exporter.py  extractor.py  extractor_ocr.py  extractor_pdfplumber.py  extractor_power_query.py  extractor_spire.py  extractor_support.py  models.py  pipeline.py  spec_builder.py  table_schemas.py
tests/: test_table_schemas.py
