[project]
name = "pdf-spec-builder"
version = "0.1.0"
description = "Offline Windows desktop app for converting technical documents into developer-facing specifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spire.pdf>=10.5.2",
    "pypdfium2>=4.30.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
